# dunamismax.com

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  BUILD.md  Caddyfile  Cargo.toml  Dockerfile  Gemfile  README.md  astro.config.mjs  biome.json  build.gradle.kts  compose.yaml  docker-compose.yml  gradle.properties  index.html  justfile  package-lock.json  package.json  pom.xml  pyproject.toml  settings.gradle.kts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
app/assets/stylesheets/: application.css
app/controllers/: feeds_controller.rb  pages_controller.rb  posts_controller.rb  projects_controller.rb
app/helpers/: application_helper.rb
app/javascript/controllers/: theme_controller.js
app/models/: post.rb  project.rb
app/views/feeds/: index.rss.builder
app/views/layouts/: application.html.erb
app/views/pages/: about.html.erb  contact.html.erb  home.html.erb
app/views/posts/: index.html.erb  show.html.erb
app/views/projects/: index.html.erb
app/views/pwa/: manifest.json.erb
app/views/shared/: _footer.html.erb  _header.html.erb
config/: application.rb  ci.rb  database.yml  routes.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: filter_parameter_logging.rb
content/: projects.toml
content/pages/: about.md
crates/dunamismax-site/: Cargo.toml
crates/dunamismax-site/assets/: theme.js
crates/dunamismax-site/migrations/: 20260517000000_runtime_state.sql
crates/dunamismax-site/src/: assets.rs  config.rs  content.rs  db.rs  lib.rs  main.rs  pages.rs  router.rs
db/: schema.rb  seeds.rb
db/migrate/: 20260430120000_create_posts.rb  20260430120100_create_projects.rb
db/seeds/posts/: deploying-sentrypact-com.html  rails-default-small-systems.html  rewriting-dunamismax-in-rails.html
deploy/: Caddyfile  Caddyfile.cloudflare-origin  deploy-prod.sh  dunamismax-site.service  generate-cloudflare-origin-csr.sh  site.env.example  static-site.Caddyfile  switch-to-cloudflare-origin.sh
docs/: frontend-contract-inventory.md
frontend/: .gitignore  README.md  astro.config.mjs  biome.json  package.json  tsconfig.json
frontend/src/components/: PhasePill.vue  SiteFooter.astro  SiteHeader.astro
frontend/src/config/: site.ts
frontend/src/content/: config.ts
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: blog.ts  machine-surfaces.ts  projects.ts  structured-data.ts
frontend/src/pages/: 404.astro  about.astro  contact.astro  feed.xml.ts  health.ts  index.astro  projects.astro  robots.txt.ts  sitemap.xml.ts
frontend/src/styles/: global.css  tokens.css
frontend/tests/: content-utils.test.ts  machine-surfaces.test.ts  site-config.test.ts  structured-data.test.ts
public/: 404.html  500.html
scripts/: build.py  redeploy.sh  smoke.py  verify.sh
scripts/builder/: check.py  content.py  render.py  rss.py
src/: content.config.ts  main.tsx  routeTree.gen.ts
src/app/: config.py  main.py  site.py
src/app/content/: blog.py  projects.py
src/app/routes/: pages.py
src/app/static/: robots.txt
src/app/templates/: 404.html  (+5 more)
src/components/: Head.tsx  Layout.css  Layout.tsx
src/layouts/: BaseLayout.astro
src/lib/: blog.ts  projects.ts  reading-time.ts
src/pages/: 404.astro  about.astro  contact.astro  feed.xml.ts  index.astro  projects.astro
src/routes/: __root.tsx  about.css  about.tsx  contact.css  contact.tsx  index.css  index.tsx  projects.css  projects.tsx
src/styles/: base.css  site.css  tokens.css
src/ts/: main.ts  theme.ts
test/controllers/: feeds_controller_test.rb  pages_controller_test.rb  posts_controller_test.rb  projects_controller_test.rb
test/fixtures/: posts.yml  projects.yml
tests/: smoke.test.ts  test_content.py  test_launch_surfaces.py  test_routes.py
(+105 files in other folders)
