[workspace]
members = ["crates/dunamismax-site"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dunamismax/dunamismax.com"
rust-version = "1.95"

[workspace.dependencies]
axum = "0.8.9"
ammonia = "4.1.2"
chrono = "0.4.44"
leptos = "0.8.19"
include_dir = "0.7.4"
pulldown-cmark = "0.13.3"
serde = "1.0.228"
sqlx = "0.8.6"
thiserror = "2.0.18"
tokio = "1.52.3"
tower = "0.5.3"
tower-http = "0.6.10"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.18.1"
