[project]
name = "dunamismax-com"
version = "1.0.0"
description = "Personal site for Stephen Sawyer. FastAPI + Jinja2 + htmx."
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.7",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
