[project]
name = "dunamismax-site"
version = "0.0.0"
description = "Static site builder for dunamismax.com"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/builder"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["dist", "node_modules"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "ARG",  # unused-args
    "C4",   # comprehensions
    "PTH",  # use pathlib
    "TCH",  # type-checking imports
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["scripts"]
exclude = ["dist/"]
