[package]
name = "dunamismax-site"
version = "0.1.0"
description = "Rust rewrite scaffold for dunamismax.com."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
ammonia = { workspace = true }
chrono = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
pulldown-cmark = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
toml = { workspace = true, features = ["parse", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
